--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - PORT=3001
       - DB_PATH=/app/cpg.db
     volumes:
-      - ../cpg.db:/app/cpg.db
+      - ${CPG_DB_PATH:-../cpg.db}:/app/cpg.db
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3001/api/schema/stats"]
